# routes/customer.js
@@ -67,6 +67,7 @@ router.get(
                     'secondaryContactNumber',
                     'secondaryEmail',
                     'address',
+                    'creditLimit',
                     'description',
                     'latitude',
                     'longitude',
@@ -137,6 +138,7 @@ router.get(
                     'secondaryContactNumber',
                     'secondaryEmail',
                     'address',
+                    'creditLimit',
                     'description',
                     'latitude',
                     'longitude',
